# gdj

./: .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  README.md  esum.txt  first  format.sh  jlang.c  test-runner.ijs  tsu.ijs
failed-tests/: README
jconsole/: jconsole.c  jeload.c
jenv/system/defs/: netdefs_linux_64.ijs
src/: CMakeLists.txt  a.h  ab.c  af.c  ai.c  am.c  ar.c  ar.h  as.c  au.c  c.c  cc.c  cd.c  cip.c  cl.c  cp.c  cr.c  cr_t.h  cu.c  cv.c  cx.c  d.h  dstop.c  dsusp.c  dtoa.h  f.c  f2.c  files  files2  i.c  je.h  jeload.c  jerr.h  jlang.c  js.h  jtype.h  m.c  m.h  make.txt  pv.c  (+43 more)
src-mangled/: a.c  am.c  am1.c  amn.c  ap.c  as.c  cip_t.h  cpdtsp.c  dc.c  dss.c  dtoa.c  j.h  ja.h  jeload.c  p.c  p.h  px.c  r.c  rl.c  sc.c  v2.c  va1.c  va2.c  vbit.c  vchar.c  vcomp.h  vf.c  vfromsp.c  vgranking.c  vgsp.c  vi.c  vm.c  vsb.c  vt.c  vz.h  wn.c  ws.c  x.h  xa.c  xb.c  (+4 more)
src2/: a.c  ao.c  ca.c  cf.c  cg.c  ch.c  crs.c  ct.c  d.c  io.c  j.c  jc.h  jdlllic.c  jlib.h  jt.h  k.c  mbx.c  sn.c  v.c  v0.c  va2s.c  vasm.h  vbang.c  ve.c  vg.h  viix.c  visp.c  vq.h  vrand.c  vx.c  w.h  xf.c  xt.c
test/: tsu.ijs
test/failed-tests/: README
